Fix horizontal scroll wobble

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -304,6 +304,8 @@ p {
 
 .gallery {
   padding: 0 40px 0 40px;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .project-image {
@@ -334,6 +336,8 @@ blockquote {
 
 .next-container {
   padding: 0 40px 0 40px;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .next {
